--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,19 +1,18 @@
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: recommendations
-  namespace: app
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: recs.127.0.0.1.nip.io
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: recommendations
-                port:
-                  number: 80
+  - http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: recommendations
+            port:
+              number: 8080
