--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -8,6 +8,7 @@ spec:
     app: recommendations
   ports:
     - name: http
-      port: 80
+      protocol: TCP
+      port: 8080
       targetPort: 8080
   type: ClusterIP
