--- a/k8s/postgres/service.yaml
+++ b/k8s/postgres/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
-kind: PersistentVolume
+kind: Service
 metadata:
-  name: pv0001
+  name: postgres
+  namespace: app
 spec:
-  capacity:
-    storage: 1Gi
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: /data/pv0001
-  storageClassName: "default"
+  ports:
+    - port: 5432
+      targetPort: 5432
+  selector:
+    app: postgres
+  clusterIP: None
