--- a/k8s/postgres/statefulset.yaml
+++ b/k8s/postgres/statefulset.yaml
@@ -1,66 +1,36 @@
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: redis
-  labels:
-    app: redis
+  name: postgres
+  namespace: app
 spec:
-  serviceName: "redis"
+  serviceName: "postgres"
   replicas: 1
   selector:
     matchLabels:
-      app: redis
+      app: postgres
   template:
     metadata:
       labels:
-        app: redis
+        app: postgres
     spec:
       containers:
-        - name: redis
-          image: "redis:6-alpine"
+        - name: postgres
+          image: postgres:15-alpine
           ports:
-            - containerPort: 6379
-              protocol: TCP
+            - containerPort: 5432
+          envFrom:
+            - secretRef:
+                name: db-secret
           volumeMounts:
-          - name: redis-storage
-            mountPath: /data
-          resources:
-            limits:
-              cpu: "0.50"
-              memory: "128Mi"
-            requests:
-              cpu: "0.25"        
-              memory: "64Mi"
-      volumes:
-      - name: redis-storage
-        persistentVolumeClaim:
-          claimName: redis-data
-        # emptyDir: {}
-
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: redis-data
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 1Gi
-  storageClassName: "default"
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: redis
-  labels:
-    app: redis
-spec:
-  ports:
-  - port: 6379
-    targetPort: 6379
-  selector:
-    app: redis
+            - name: postgres-storage
+              mountPath: /var/lib/postgresql/data
+  volumeClaimTemplates:
+    - metadata:
+        name: postgres-storage
+      spec:
+        accessModes: [ "ReadWriteOnce" ]
+        resources:
+          requests:
+            storage: 1Gi
+        storageClassName: "standard"
