Revert "[CD-pipeline][git-clone] Sync Tekton pipeline.yaml with OpenShift pipeline"

--- a/.tekton/pipeline.yaml
+++ b/.tekton/pipeline.yaml
@@ -20,14 +20,13 @@ spec:
 
   tasks:
     - name: git-clone
-      params:
-        - name: URL
-          value: $(params.git-repo)
-        - name: REVISION
-          value: $(params.git-ref)
       taskRef:
-        kind: Task
-        name: git-clone
+        name: git-clone        
       workspaces:
         - name: output
-          workspace: pipeline-workspace
+          workspace: pipeline-workspace 
+      params:
+        - name: url
+          value: $(params.git-repo)
+        - name: revision
+          value: $(params.git-ref)
