--- a/.tekton/pipeline.yaml
+++ b/.tekton/pipeline.yaml
@@ -102,5 +102,18 @@ spec:
       workspaces:
         - name: source
           workspace: pipeline-workspace
+#################################################
+#               task3: buildah                  #
+#################################################
+
+
+#################################################
+#               task4: deploy image             #
+#################################################
+
+
+#################################################
+#               task5: behave                   #
+#################################################
   workspaces:
     - name: pipeline-workspace
