--- a/k8s/postgres/pvc.yaml
+++ b/k8s/postgres/pvc.yaml
@@ -2,11 +2,10 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-pvc
-  namespace: app
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
-  storageClassName: "standard"
+  storageClassName: gp3
