--- a/k8s/pv.yaml
+++ b/k8s/pv.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: postgres-pv
+  name: pv0001
 spec:
   capacity:
     storage: 1Gi
+  volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: /data/postgres
-  storageClassName: "standard"
+    path: /data/pv0001
+  # storageClassName: "default"
