--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,13 +2,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: recommendations
-  namespace: app
+  labels:
+    app: recommendations
 spec:
   selector:
     app: recommendations
+  type: ClusterIP
+  internalTrafficPolicy: Cluster
   ports:
-    - name: http
+    - name: 8080-tcp
       protocol: TCP
       port: 8080
       targetPort: 8080
-  type: ClusterIP
